# monoid

./: Cargo.toml  README.md
benches/: benches.rs
src/: lib.rs
