[package]
authors = ["Igor Polyakov <iopguy@gmail.com>"]
description = "A package providing some common monoids for use in Rust"
license = "MIT"
name = "monoid"
repository = "https://github.com/iopq/monoid"
version = "0.0.6"

[dependencies]
bencher = "0.1.5"

[[bench]]
name = "benches"
harness = false
